<resources>

    <!-- MovieDetailFragment -->
    <string name="app_name">씨네마천국</string>
    <string name="reservation_grade">예매율</string>
    <string name="rating">평점</string>
    <string name="number_of_people">누적관객수</string>
    <string name="story">줄거리</string>
    <string name="story_content">군도, 백성을 구하라!\n
        양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어
        세상을 바로잡고자 하는 의적떼인 군도(群盜), 지리산 추설이 있었다. \n\n

        쌍칼 도치 vs 백성의 적 조윤\n
        잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이,
        나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양민들을 수탈,
        삼남지방 최고의 대부호로 성장한다. 한편 소, 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는
        죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류. 지리산 추설의 신 거성(新 巨星) 도치로 거듭난다.\n\n

        뭉치면 백성, 흩어지면 도적!\n
        망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적,
        조윤과 한 판 승부를 시작하는데...
    </string>
    <string name="director_and_actor">감독/출연</string>
    <string name="director">감독</string>
    <string name="actor">출연</string>
    <string name="review_oneline">한줄평</string>
    <string name="write_review">작성하기</string>
    <string name="detail">모두 보기</string>
    <string name="reserve">예매하기</string>

    <!-- activity_write_review.xml -->
    <string name="enter_rating">평점을 입력해 주세요</string>
    <string name="save">저 장</string>
    <string name="cancel">취 소</string>

    <!-- activity_movie_list -->
    <string name="more_info">상세보기</string>

    <!-- 툴바 -->
    <string name="toolbar_movie_list">영화 목록</string>

    <!-- Drawer Layout -->
    <string name="navigation_drawer_close">R.string.navigation_drawer_close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_user_name">Mike</string>
    <string name="nav_user_email">mike.jung.global@gmail.com</string>
    <string name="menu_setting">사용자 설정</string>
    <string name="menu_reserve">예매하기</string>
    <string name="menu_list">영화 목록</string>
    <string name="menu_API">영화 API</string>
    <string name="gallery">갤러리</string>

</resources>

