<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#fff"
        tools:context=".WriteReviewActivity">
    <!-- 영화 타이틀 -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/txt_write_review_act_movie_title"
                style="@style/boldDarkGrayStyle"
                android:textSize="32sp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:text="군도"
        />
        <ImageView
                android:src="@drawable/ic_15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="#e2e2e2"/>

    <!-- 평점 -->
    <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rb_write_review_act_rating"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.1"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
            android:text="@string/enter_rating"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            style="@style/regularGrayStyle"/>

    <!-- 리뷰 한줄평 입력란 -->

    <EditText
            android:id="@+id/edt_write_review_act_context"
            style="@style/editTextStyle"
            android:hint="100자 이내로 작성해주세요."
            android:background="@drawable/yellow_border"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="240dp"/>

    <!-- 버튼 -->

    <LinearLayout
            android:layout_gravity="right"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_write_review_act_save"
                android:padding="8dp"
                android:background="@drawable/purple_border"
                android:text="@string/save"
                android:textSize="12sp"
                style="@style/regularBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_write_review_act_cancel"
                android:padding="8dp"
                android:background="@drawable/purple_border"
                android:text="@string/cancel"
                android:textSize="12sp"
                style="@style/regularBlackStyle"
                android:layout_marginHorizontal="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>