<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.movie.fragment.MovieDetailFragment">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical">

            <!-- 영화 포스터 및 좋아요/싫어요 -->

            <RelativeLayout
                    android:id="@+id/rl_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="256dp"
                    android:background="@drawable/main_act_gradation_blue">

                <ImageView
                        android:id="@+id/img_poster_main"
                        android:layout_width="160dp"
                        android:layout_height="320dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/image11" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="64dp"
                        android:layout_toRightOf="@+id/img_poster_main">

                    <TextView
                            android:id="@+id/txt_movie_detail_movietitle"
                            style="@style/boldWhiteStyle"
                            android:text="군도"
                            android:textSize="24sp" />

                    <ImageView
                            android:id="@+id/img_movie_detail_frag_grade"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginLeft="8dp"
                            android:layout_toRightOf="@+id/txt_movie_detail_movietitle"
                            android:src="@drawable/ic_15" />

                    <TextView
                            android:id="@+id/txt_opendate_main"
                            style="@style/regularWhiteStyle"
                            android:layout_below="@+id/txt_movie_detail_movietitle"
                            android:layout_marginTop="8dp"
                            android:text="2014.07.23 개봉"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/txt_movieinfo_main"
                            style="@style/regularWhiteStyle"
                            android:layout_below="@+id/txt_opendate_main"
                            android:layout_marginTop="8dp"
                            android:text="액션 / 137분"
                            android:textSize="16sp" />

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginBottom="40dp"
                            android:orientation="horizontal">

                        <ImageView
                                android:id="@+id/btn_main_act_thumb_up"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_thumb_up" />

                        <TextView
                                android:id="@+id/txt_main_act_thumb_up"
                                style="@style/regularWhiteStyle"
                                android:layout_marginLeft="2dp"
                                android:inputType="number"
                                android:text="0"
                                android:textSize="16sp" />

                        <ImageView
                                android:id="@+id/btn_main_act_thumb_down"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="24dp"
                                android:background="@drawable/selector_thumb_down" />

                        <TextView
                                android:id="@+id/txt_main_act_thumb_down"
                                style="@style/regularWhiteStyle"
                                android:layout_marginLeft="2dp"
                                android:inputType="number"
                                android:text="0"
                                android:textSize="16sp" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>
            <!-- 예매율,평점,누적관객수 -->
            <LinearLayout
                    android:id="@+id/ll_movie_detail"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:layout_below="@+id/rl_movie_detail"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    <TextView
                            style="@style/regularBlackStyle"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/reservation_grade"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/txt_movie_detail_frag_reservation_rate"
                            style="@style/regularBlackStyle"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginBottom="16dp"
                            android:text="5위 1.8%"
                            android:textSize="16sp" />
                </RelativeLayout>

                <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="#EAEAEA" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    <TextView
                            style="@style/regularBlackStyle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/rating"
                            android:textSize="16sp" />

                    <RatingBar
                            android:id="@+id/rb_movie_detail_frag_rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="16dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginBottom="16dp"
                            android:isIndicator="false"
                            android:numStars="5"
                            android:rating="4.2"
                            android:stepSize="0.1" />

                    <TextView
                            android:id="@+id/txt_movie_detail_frag_rating"
                            style="@style/regularBlackStyle"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="8dp"
                            android:layout_marginBottom="16dp"
                            android:text="8.2"
                            android:textSize="16sp" />
                </RelativeLayout>

                <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="#EAEAEA" />

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                    <TextView
                            style="@style/regularBlackStyle"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:text="@string/number_of_people"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/txt_movie_detail_frag_audience"
                            style="@style/regularBlackStyle"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="839,399"
                            android:textSize="16sp" />
                </RelativeLayout>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:layout_below="@id/ll_movie_detail"
                    android:background="@color/colorLightGray" />
            <!-- 줄거리 -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                <TextView
                        style="@style/boldBlackStyle"
                        android:layout_marginVertical="16dp"
                        android:text="@string/story"
                        android:textSize="16sp" />

                <TextView
                        android:id="@+id/txt_movie_detail_frag_synopsis"
                        style="@style/regularBlackStyle"
                        android:layout_marginBottom="16dp"
                        android:text="@string/story_content"
                        android:textSize="16sp" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/colorLightGray" />

            <!-- 감독/출연 -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:paddingHorizontal="16dp">

                <TextView
                        style="@style/boldBlackStyle"
                        android:layout_marginVertical="16dp"
                        android:text="@string/director_and_actor"
                        android:textSize="16sp" />

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/txt_director"
                            style="@style/boldBlackStyle"
                            android:layout_alignParentLeft="true"
                            android:text="@string/director"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/txt_movie_detail_frag_director"
                            style="@style/regularBlackStyle"
                            android:layout_marginLeft="16dp"
                            android:layout_toRightOf="@+id/txt_director"
                            android:text="윤종빈"
                            android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp">

                    <TextView
                            android:id="@+id/txt_actor"
                            style="@style/boldBlackStyle"
                            android:layout_alignParentLeft="true"
                            android:text="@string/actor"
                            android:textSize="16sp" />

                    <TextView
                            android:id="@+id/txt_movie_detail_frag_actor"
                            style="@style/regularBlackStyle"
                            android:layout_marginLeft="16dp"
                            android:layout_toRightOf="@+id/txt_actor"
                            android:text="하정우(도치),강동원(조윤)"
                            android:textSize="16sp" />
                </RelativeLayout>
            </LinearLayout>

            <!-- 갤러리 -->

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="#EAEAEA" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="24dp"
                    android:paddingVertical="16dp">

                <TextView
                        style="@style/boldBlackStyle"
                        android:text="@string/gallery"
                        android:textSize="16sp" />
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_frag_movie_detail_gallery"
                        android:layout_marginTop="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="#EAEAEA" />

            <!-- 한줄평 -->

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:background="@color/colorWhite"
                    android:paddingHorizontal="24dp"
                    android:paddingTop="32dp"
                    android:paddingBottom="16dp">

                <TextView
                        style="@style/boldBlackStyle"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/review_oneline"
                        android:textSize="16sp" />

                <RelativeLayout
                        android:id="@+id/rl_write"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_toLeftOf="@+id/txt_write"
                            android:src="@drawable/ic_review_selected" />

                    <TextView
                            android:id="@+id/txt_write"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/write_review"
                            android:textColor="@color/colorRed"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                </RelativeLayout>

                <ListView
                        android:id="@+id/lv_main_act_review"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_write"
                        android:layout_marginVertical="16dp" />

                <Button
                        android:id="@+id/btn_main_act_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginHorizontal="8dp"
                        android:background="@drawable/purple_border"
                        android:text="@string/detail"
                        android:textColor="#DA70D6"
                        android:textSize="16sp"
                        android:textStyle="bold" />
            </RelativeLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/colorLightGray" />

            <!-- SNS 공유 및 예매하기 버튼 -->

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="32dp"
                    android:paddingVertical="8dp">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_facebook" />

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@drawable/ic_kakao" />

                <Button
                        android:id="@+id/btn_main_act_reserve"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="4dp"
                        android:layout_marginLeft="8dp"
                        android:background="#FF4500"
                        android:text="@string/reserve"
                        android:textColor="@color/colorWhite"
                        android:textSize="24dp"
                        android:textStyle="bold" />
            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:background="@color/colorLightGray" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>